# cli-server

./: .gitignore  .npmignore  CHANGELOG.md  Makefile  README.md  TODO.md  cli-server-0.1.0.tgz  forge.config.ts  index.html  landgod-link-0.1.0.tgz  managed-client.config.json  package-lock.json  package.json  playwright_mcp_config.json  tailwind.config.js  test-mcp.js  test-spawn.js  test-ws-interactive.js  test-ws.js  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.landgod-data/: audit.jsonl  daemon.json
docs/: 00-network-prerequisites.md  01-landgod-link-api.md  02-gateway-api.md  03-deploy-gateway.md  03-mcp-ws-protocol.md  04-connect-install-worker.md  04-deploy-gateway.md  05-deploy-worker.md  05-onboard-landgod.md  06-network-setup.md  06-worker-config.md  07-architecture-comparison.md  API.md  README.md  SETUP.md  architecture.md  business-proposal.md  gui-vs-headless.md  managed-client-browser-signin-pitfalls.md  managed-client-mcp-ws-tool-call-auth.md  managed-client-security-review.md  managed-client-threat-model.md  why-landgod.md
downloads/: QUICKSTART-GATEWAY.md  QUICKSTART-WORKER.md  README.md  SETUP.md  cli-server-0.1.0.tgz  landgod-0.1.0.tgz  landgod-0.1.1.tgz  landgod-0.1.2.tgz  landgod-gateway-0.1.0.tgz  landgod-gateway-0.1.1.tgz  landgod-gateway-0.1.2.tgz  landgod_computer_use-0.1.0-py3-none-any.whl  landgod_gateway-0.1.0-py3-none-any.whl  landgod_gateway-0.1.1-py3-none-any.whl  (+6 more)
mcp-servers/computer-use/: README.md  pyproject.toml
mcp-servers/computer-use/landgod_computer_use/: __init__.py  __main__.py
(+120 files in other folders)
